--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>water.ico">
   <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=tAxaxfGZdf7Gfcj12aY8u1PKbzA67ylG"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
   <title>水资源管理系统</title>
 </head>
 
