--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>water.ico">
   <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=tAxaxfGZdf7Gfcj12aY8u1PKbzA67ylG"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
+  <script src="./static/js/InfoBox_min.js"></script>
   <title>水资源管理系统</title>
 </head>
 
